# tnsdiff

./: .gitignore  CMakeLists.txt  README.md  VERSION  configure
cmake/: CMakeLists.txt
src/: CMakeLists.txt  app.cpp  app.h  env.h  main.cpp  opt.cpp  opt.h  tns.cpp  tns.h  ver.cpp  ver.h.in
